Remove the random <server> tag silliness.  Bug 321877, patch by Martijn Wargers <martijn.martijn@gmail.com>, r=mrbkap, sr=jst